--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,8 +3,8 @@ name: Create and publish Docker images
 on:
   push:
     branches:
-      - master
-      - development
+      #- master
+      #- development
   workflow_dispatch:
 
 env:
